--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	</head>
 	
 	<body>
-		<h2 class="demoHeaders">Autocomplete</h2>
 		<div>
-			<input id="autocomplete" title="type &quot;a&quot;">
+			<input id="country" placeholder="Страна">
 		</div>		
+
+		<button class="submit" id="submit">submit</button>
 	</body>
 </html>
